docs/original_moodle/unidades/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-02-35.ceg/compilation.txt
Grupo.java:30: error: illegal start of expression
    this.alumnos=[contadorDeAlumnos++]=alumno;
                 ^
Grupo.java:30: error: ';' expected
    this.alumnos=[contadorDeAlumnos++]=alumno;
                                     ^
Grupo.java:30: error: not a statement
    this.alumnos=[contadorDeAlumnos++]=alumno;
                                       ^
3 errors
Not compiled
